--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
                                 <a href="#" class="nav-link"><strong>Home</strong></a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link"><strong>activities</strong></a>
+                                <a href="../html/activity.html" class="nav-link"><strong>activities</strong></a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link"><strong>suggestions</strong></a>
