--- a/html/activity.html
+++ b/html/activity.html
@@ -69,7 +69,7 @@
             <div class="swiper-slide" style="display: block;">
                 <div class="ballon sections">
                     <div class="section_container row">
-                        <div class="image col-lg-3">
+                        <div class="image col-lg-5" style="width: 600px;">
                             <img src="../media/slider/Summer-Activities.jpg" alt="">
                         </div>
                         <div class="text col-lg-5">
