--- a/html/index.html
+++ b/html/index.html
@@ -162,8 +162,7 @@
 
     </section>
     <footer class="footer">
-        <p class=" h4 footer"
-            style="font-size: 14px; font-weight: normal; line-height: 1; text-align: center; color: #e3e3e3; padding-top: 5px; padding-bottom: 5px; margin: 0;">
+        <p class=" h4 footer">
             all rights reserved | this is a demo page</p>
     </footer>
 
