--- a/html/index.html
+++ b/html/index.html
@@ -110,8 +110,7 @@
                                         <p>Now we can create a JavaScript function to handle the rest.
                                             Earlier, we created a function that takes a set of data points and converts them
                                             into a scalable SVG path.
-                                            But now we want to take that a step further and take the path string and work
-                                            out the data set.</p>
+                                            But now we want to take that a step further and take the path string.</p>
                                     </div>
                                 </div>
                             </div>
