--- a/html/activity.html
+++ b/html/activity.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../css/theme.css" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+        <meta name="description" content="activities of summer star summer school">
     
     </head>
     <body class="body overflow-hidden">
@@ -33,7 +33,7 @@
                                 <a href="#" class="nav-link"><strong>activities</strong></a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link"><strong>suggestions</strong></a>
+                                <a href="../html/suggestions.html" class="nav-link"><strong>suggestions</strong></a>
                             </li>
                         </ul>      
                     </div>
