--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/theme.css" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="home page">
 
 
 </head>
@@ -36,7 +37,7 @@
                     <a href="../html/activity.html" class="nav-link"><strong>activities</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link"><strong>suggestions</strong></a>
+                    <a href="../html/suggestions.html" class="nav-link"><strong>suggestions</strong></a>
                 </li>
             </ul>
         </div>
